<resources>

    <string name="time_picker_example">Time Picker Example</string>
    <string name="time_pick">Pick the time and press save button</string>
    <string name="time_save">Save</string>
    <string name="time_selected"></string>
    <string name="time_current">The Time is:</string>

    <string name="app_name">DeltaMedicalTeam</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_permission">Permission</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home (Analysis)</string>
    <string name="menu_patient">Patients</string>
    <string name="menu_lab_report">Lab Report</string>
    <string name="menu_medication">Medication</string>
    <string name="menu_health_condition">Health Condition</string>
    <string name="menu_appointment">Appointment</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_user">User Management</string>
    <string name="menu_add_user">Add User</string>
    <string name="fragment_user_manager">User Management</string>
    <string name="menu_patientManagement">Patient Management</string>
    <string name="fragment_patient_manager">Patient Management</string>
    <string name="menu_add_patient">Add Patient</string>
    <string name="menu_add_appointment">Add Appointment</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!--  String for profile screen-->
    <string name="middle_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin</string>
    <string name="patient_name">Patient Name</string>
    <string name="patient">Patient</string>
    <string name="user">User</string>
    <string name="purpose">Purpose</string>
    <string name="analysis">Analysis</string>
    <string name="x_rays">X-Rays</string>
    <string name="doctor_visits">Doctor Visits</string>
    <string name="vaccinations">Vaccinations</string>
    <string name="add_appointment">Add Appointment</string>
    <string name="filter">Filter</string>
    <string name="current_medication">Current Medication</string>
    <string name="add_medication">Add Medication</string>
    <string name="past_medication">Past Medication</string>
    <string name="choose_your_patient">Choose Your Patient</string>
    <string name="email">Email</string>
    <string name="medication_database">Medication Database</string>
    <string name="illness_database">Illness Database</string>
    <string name="log_out">Log Out</string>
    <string name="add_user">Add User</string>
    <string name="add_illness">Add Illness</string>
    <string name="add_patient">Add Patient</string>

</resources>