<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.csc131.deltamedicalteam.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_patient"
        android:name="com.csc131.deltamedicalteam.ui.patient.PatientFragment"
        android:label="@string/menu_patient"
        tools:layout="@layout/fragment_patient" />

    <fragment
        android:id="@+id/nav_appointment"
        android:name="com.csc131.deltamedicalteam.ui.appointment.AppointmentFragment"
        android:label="@string/menu_appointment"
        tools:layout="@layout/fragment_appointment" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.csc131.deltamedicalteam.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>