<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_auto_awesome"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_patient"
            android:icon="@drawable/ic_peoples_outline"
            android:title="@string/menu_patient" />
        <item
            android:id="@+id/nav_appointment"
            android:icon="@drawable/ic_event"
            android:title="@string/menu_appointment" />


    </group>
    <group android:checkableBehavior="single">
<!--        <item-->
<!--            android:id="@+id/nav_slideshow"-->
<!--            android:icon="@drawable/ic_person_outline"-->
<!--            android:title="@string/menu_profile" />-->
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_undo"
            android:title="Logout" />
    </group>
</menu>