<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.healthcondition.HealthConditionFragment">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_your_patient" />


        <Spinner
            android:id="@+id/medication_patient_list_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp" />


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/medicationTabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.tabs.TabItem
                android:id="@+id/currentMedication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_medication" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/pastMedication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/past_medication" />


        </com.google.android.material.tabs.TabLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RecyclerView_current_medication"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RecyclerView_past_medication"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/current_medication_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:minHeight="48dp"
            android:text="@string/add_medication"
            android:visibility="visible"
            tools:ignore="VisualLintBounds" />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>




